src/themes/gnome-shell-template.css
/* ... */
#panel .panel-button {
  color: @panel_fg_color;
  background-color: @panel_button_bg_color;
}

#panel .panel-button:hover,
#panel .panel-button:hover.clock-display .clock {
  background-color: alpha(currentColor, 0.2);
}

#panel .workspace-dot {
  background-color: @panel_fg_color;
  color: @panel_fg_color;
}

.window-close {
  background-color: @window_bg_color;
  color: @window_fg_color;
}

.window-close:hover {
  background-color: @headerbar_bg_color;
}

#dash .dash-background {
  color: @window_fg_color;
  background-color: @card_bg_color;
}

#dashtodockContainer.extended:overview #dash .dash-background {
  background-color: @overview_bg_color;
}

#dash .dash-item-container .show-apps .overview-icon,
#dash .dash-item-container .overview-tile .overview-icon,
#dash .dash-item-container .grid-search-result .overview-icon {
  color: @window_fg_color;
  background-color: transparent;
}

#dash .dash-item-container .show-apps:hover .overview-icon,
#dash .dash-item-container .overview-tile:hover .overview-icon,
#dash .dash-item-container .grid-search-result:hover .overview-icon {
  background-color: @headerbar_bg_color;
}

#dash .dash-item-container .show-apps:active .overview-icon,
#dash .dash-item-container .overview-tile:active .overview-icon,
#dash .dash-item-container .grid-search-result:active .overview-icon {
  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
}

#dash .dash-item-container .app-well-app-running-dot,
#dash .dash-item-container .app-grid-running-dot {
  background-color: @accent_color;
}

/* Tiled window previews */
.tile-preview {
  background-color: @accent_transparent;
  border: 1px solid @accent_color;
}

/* Overview stuff */
.workspace-animation, #overviewGroup {
  background-color: @overview_bg_color;
}

.icon-grid .overview-tile:hover, .grid-search-result:hover, .overview-tile:focus, .grid-search-result:focus, .overview-tile:selected, .grid-search-result:selected {
  color: @window_fg_color;
  background-color: @card_bg_color;
  background-image: none;
}

.list-search-result-title, .list-search-provider-details {
  color: @search_fg_color;
}

.list-search-result-description {
  color: @search_fg_color;
  font-weight: 300;
}

.list-search-result:hover, .list-search-result:selected, .search-provider-icon:hover, .search-section *:hover {
  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
  background-color: @card_bg_color;
}

.page-indicator-icon {
  background-color: @window_fg_color;
}

.page-navigation-arrow {
  background-color: @card_bg_color;
}

.page-navigation-arrow > StIcon {
  color: @window_fg_color;
}

.page-navigation-arrow:hover {
  background-color: @headerbar_bg_color;
}

.search-section-content  {
  color: @window_fg_color;
  background-color: @card_bg_color;
}

.app-folder {
  background-color: @card_bg_color;
  color: @window_fg_color;
}

.app-folder .overview-icon {
  background-color: transparent;
}

.app-folder:hover {
  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
  color: @window_fg_color;
}

.app-folder:active {
  background-color: @card_bg_color;
  color: @window_fg_color;
}

.app-folder-dialog {
  color: @window_fg_color;
  background-color: @window_bg_color;
  border: 2px @border_color;
}

.app-grid-running-dot {
  background-color: @accent_color;
}

.arcmenu-button {
  background-color: @card_bg_color;
  color: @window_fg_color;
}

.workspace-thumbnails .workspace-thumbnail {
  color: @window_fg_color;
  background-color: @card_bg_color;
}

.workspace-thumbnail-indicator {
  border: 3px solid @accent_color;
}

.event-time {
  color: @window_fg_color;
}

.cycler-highlight {
  border: 5px solid @accent_color;
}

.switcher-list .item-box {
  color: @window_fg_color;
}

.switcher-list .item-box:hover, .switcher-list .item-box:selected {
  background-color: @headerbar_bg_color;
}

/* screenshot-ui */
.screenshot-ui-close-button {
  background-color: @card_bg_color;
  color: @window_fg_color;
}

.screenshot-ui-capture-button {
  border: 4px @window_fg_color;
  padding: 4px;
}

.screenshot-ui-capture-button .screenshot-ui-capture-button-circle {
  background-color: @window_fg_color;
}

.screenshot-ui-capture-button:cast .screenshot-ui-capture-button-circle {
  background-color: @accent_color;
}

.screenshot-ui-show-pointer-button, .screenshot-ui-type-button {
  background-color: @card_bg_color;
  color: @window_fg_color;
}

.screenshot-ui-show-pointer-button:hover, .screenshot-ui-type-button:hover {
  background-color: @headerbar_bg_color;
}

.screenshot-ui-show-pointer-button:active, .screenshot-ui-type-button:active {
  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
}

.screenshot-ui-window-selector {
  background-color: @overview_bg_color;
}

.screenshot-ui-window-selector-window:hover .screenshot-ui-window-selector-window-border {
  border-color: @accent_transparent;
}

.screenshot-ui-window-selector-window:checked .screenshot-ui-window-selector-window-border {
  border-color: @accent_color;
}

.screenshot-ui-window-selector-window:checked .screenshot-ui-window-selector-check {
  background-color: @accent_color;
  color: @window_bg_color;
}

.search-entry,
StEntry {
  background-color: @card_bg_color;
  color: @window_fg_color;
}

StLabel.hint-text:insensitive, .overview-tile {
  color: @search_fg_color;
}

.search-entry:focus,
StEntry:focus {
  background-color: @headerbar_bg_color;
}

/* Popovers/Menus */
.popup-menu-boxpointer {
  -arrow-background-color: transparent;
  -arrow-border-color: transparent;
  background: transparent;
}

.vhandle {
  background-color: @card_bg_color;
}

.popup-menu {
  color: @window_fg_color !important;
}

.popup-menu .popup-menu-content {
  background-color: @window_bg_color;
  border: 2px @border_color;
}

.popup-menu .popup-menu-item {
  color: @window_fg_color !important;
}

.popup-inactive-menu-item:insensitive {
  color: @window_fg_color;
}
/* ... */

